mas correciones para diseño responsive

--- a/menu.html
+++ b/menu.html
@@ -6,11 +6,15 @@
   <title>Apuntes de lenguajes y automatas II</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    #titulo {
+      text-decoration: none;
+      font-size: 1.75vw;
+    }
+
     h1 {
       font-family: "Times New Roman", serif;
       color: white;
       text-align: center;
-      font-size: 150%;
     }
 
     nav {
@@ -25,11 +29,6 @@
       /* Para que el menú sea esatático */
       top: 0%;
       /* Para que el menú sea estático */
-    }
-
-    #titulo {
-      text-decoration: none;
-      font-size: 1.75vw;
     }
 
     nav ul {
@@ -47,7 +46,7 @@
       display: block;
       color: white;
       text-align: center;
-      padding: 14px 16px;
+      padding: 1vw 1.25vw;
       text-decoration: none;
       font-size: 1.25vw;
     }
