organice html en una carpeta y agrande tamaño de opciones

--- a/index.html
+++ b/index.html
@@ -6,20 +6,85 @@
   <title>Apuntes de lenguajes y automatas II</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/harry.css">
+  <link rel="stylesheet" href="css/menu.css">
   <link rel="icon" href="img/logo.png" type="image/png">
   <script src="js/insertarHTML.js"></script>
 </head>
 
 <body>
-  <div w3-include-html="menu.html"></div>
+  <nav>
+    <a id="titulo" href="index.html">
+      <h1>APUNTES DE LENGUAJES Y AUTOMATAS II</h1>
+    </a>
+    <ul>
+      <!-- <li><a href="index.html">Inicio</a></li> -->
+      <li class="dropdown">
+        <div class="dropbtn">
+          <p>Unidad I</p>
+          <img src="img/FlechaAbajo.png" alt="Flecha">
+        </div>
+        <div class="dropdown-content">
+          <a href="src/u1t1.html">Árboles de expresiones</a>
+          <a href="src/u1t2.html">Acciones semánticas de un analizador sintáctico</a>
+          <a href="src/u1t3.html">Comprobaciones de tipos en expresiones</a>
+          <a href="src/u1t4.html">Pila semántica en un analizador sintáctico</a>
+          <a href="src/u1t5.html">Esquema de traducción</a>
+          <a href="src/u1t6.html">Generación de la tabla de símbolo y tabla de direcciones</a>
+          <a href="src/u1t7.html">Manejo de errores semánticos</a>
+        </div>
+      </li>
+      <li class="dropdown">
+        <div class="dropbtn">
+          <p>Unidad II</p>
+          <img src="img/FlechaAbajo.png" alt="Flecha">
+        </div>
+        <div class="dropdown-content">
+          <!-- <a href="#">Opción 1</a>
+                    <a href="#">Opción 2</a>
+                    <a href="#">Opción 3</a>
+                    <a href="#">Opción 4</a>
+                    <a href="#">Opción 5</a>
+                    <a href="#">Opción 6</a>
+                    <a href="#">Opción 7</a> -->
+        </div>
+      </li>
+      <li class="dropdown">
+        <div class="dropbtn">
+          <p>Unidad III</p>
+          <img src="img/FlechaAbajo.png" alt="Flecha">
+        </div>
+        <div class="dropdown-content">
+          <!-- <a href="#">Opción 1</a>
+                    <a href="#">Opción 2</a>
+                    <a href="#">Opción 3</a>
+                    <a href="#">Opción 4</a>
+                    <a href="#">Opción 5</a>
+                    <a href="#">Opción 6</a>
+                    <a href="#">Opción 7</a> -->
+        </div>
+      </li>
+      <li class="dropdown">
+        <div class="dropbtn">
+          <p>Unidad IV</p>
+          <img src="img/FlechaAbajo.png" alt="Flecha">
+        </div>
+        <div class="dropdown-content">
+          <!-- <a href="#">Opción 1</a>
+                    <a href="#">Opción 2</a>
+                    <a href="#">Opción 3</a>
+                    <a href="#">Opción 4</a>
+                    <a href="#">Opción 5</a>
+                    <a href="#">Opción 6</a>
+                    <a href="#">Opción 7</a> -->
+        </div>
+      </li>
+    </ul>
+  </nav>
   <div id="body">
     <!-- <h2>Título del texto</h2> -->
     <p>¡Bienvenidos a nuestro blog sobre lenguajes y autómatas 2! Aquí, exploraremos juntos el emocionante universo de la teoría de lenguajes formales y la increíble potencia de los autómatas en la resolución de problemas complejos.<br><br>Sumérgete en artículos informativos, análisis profundos y tutoriales detallados que te guiarán a través de los conceptos clave. Ya seas un estudiante apasionado, un profesional curioso o simplemente alguien intrigado por el misterioso lenguaje de las máquinas, este espacio está diseñado para inspirar y enriquecer tu comprensión.<br><br>Prepárate para desentrañar los secretos de los lenguajes formales, descubrir la magia detrás de los autómatas y explorar las aplicaciones emocionantes en el mundo real. ¡En nuestro blog cada entrada es una puerta abierta hacia el conocimiento y la maravilla de los lenguajes y autómatas!</p>
     <img src="https://1.bp.blogspot.com/-vuv-a3gN-2I/Xn5pWGyaP2I/AAAAAAAAAEg/5VTtKy8ddAA_1_2c2EG1t4l0AyW-uSu1QCLcBGAsYHQ/s1600/programming-and-coding-application-development-and-code-optimization-vector.jpg" alt="Imagen alusiva al blog">
   </div>
-  <script>
-    includeHTML();
-  </script>
 </body>
 
 </html>
