--- a/src/menu.html
+++ b/src/menu.html
@@ -5,98 +5,12 @@
   <meta charset="utf-8">
   <title>Apuntes de lenguajes y automatas II</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    #titulo {
-      text-decoration: none;
-      font-size: 1.75vw;
-    }
-
-    h1 {
-      font-family: "Times New Roman", serif;
-      color: white;
-      text-align: center;
-    }
-
-    nav {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #222222;
-      padding: 10px;
-      position: fixed;
-      /* Para que el menú sea estático */
-      width: 100%;
-      /* Para que el menú sea esatático */
-      top: 0%;
-      /* Para que el menú sea estático */
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-
-    nav li {
-      float: left;
-    }
-
-    nav li a {
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 1vw 1.25vw;
-      text-decoration: none;
-      font-size: 1.25vw;
-    }
-
-    .dropbtn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    li a:hover,
-    .dropbtn:hover {
-      background-color: #111111;
-    }
-
-    li div p {
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 1vw 1.25vw;
-      margin: 0;
-      font-size: 1.5vw;
-      cursor: default;
-    }
-
-    li div img {
-      margin: 0;
-      margin-right: 1.25vw;
-      width: 0.75vw;
-      height: 0.75vw;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #333333;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/menu.css">
 </head>
 
 <body>
   <nav>
-    <a id="titulo" href="index.html">
+    <a id="titulo" href="../index.html">
       <h1>APUNTES DE LENGUAJES Y AUTOMATAS II</h1>
     </a>
     <ul>
@@ -104,7 +18,7 @@
       <li class="dropdown">
         <div class="dropbtn">
           <p>Unidad I</p>
-          <img src="img/FlechaAbajo.png" alt="Flecha">
+          <img src="../img/FlechaAbajo.png" alt="Flecha">
         </div>
         <div class="dropdown-content">
           <a href="u1t1.html">Árboles de expresiones</a>
@@ -119,7 +33,7 @@
       <li class="dropdown">
         <div class="dropbtn">
           <p>Unidad II</p>
-          <img src="img/FlechaAbajo.png" alt="Flecha">
+          <img src="../img/FlechaAbajo.png" alt="Flecha">
         </div>
         <div class="dropdown-content">
           <!-- <a href="#">Opción 1</a>
@@ -134,7 +48,7 @@
       <li class="dropdown">
         <div class="dropbtn">
           <p>Unidad III</p>
-          <img src="img/FlechaAbajo.png" alt="Flecha">
+          <img src="../img/FlechaAbajo.png" alt="Flecha">
         </div>
         <div class="dropdown-content">
           <!-- <a href="#">Opción 1</a>
@@ -149,7 +63,7 @@
       <li class="dropdown">
         <div class="dropbtn">
           <p>Unidad IV</p>
-          <img src="img/FlechaAbajo.png" alt="Flecha">
+          <img src="../img/FlechaAbajo.png" alt="Flecha">
         </div>
         <div class="dropdown-content">
           <!-- <a href="#">Opción 1</a>
