--- a/src/u1t6.html
+++ b/src/u1t6.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <title>Apuntes de lenguajes y automatas II</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/harry.css">
-  <link rel="icon" href="img/logo.png" type="image/png">
-  <script src="js/insertarHTML.js"></script>
+  <link rel="stylesheet" href="../css/harry.css">
+  <link rel="icon" href="../img/logo.png" type="image/png">
+  <script src="../js/insertarHTML.js"></script>
 </head>
 
 <body>
