agregue un footer

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
     <p>¡Bienvenidos a nuestro blog sobre lenguajes y autómatas 2! Aquí, exploraremos juntos el emocionante universo de la teoría de lenguajes formales y la increíble potencia de los autómatas en la resolución de problemas complejos.<br><br>Sumérgete en artículos informativos, análisis profundos y tutoriales detallados que te guiarán a través de los conceptos clave. Ya seas un estudiante apasionado, un profesional curioso o simplemente alguien intrigado por el misterioso lenguaje de las máquinas, este espacio está diseñado para inspirar y enriquecer tu comprensión.<br><br>Prepárate para desentrañar los secretos de los lenguajes formales, descubrir la magia detrás de los autómatas y explorar las aplicaciones emocionantes en el mundo real. ¡En nuestro blog cada entrada es una puerta abierta hacia el conocimiento y la maravilla de los lenguajes y autómatas!</p>
     <img src="https://1.bp.blogspot.com/-vuv-a3gN-2I/Xn5pWGyaP2I/AAAAAAAAAEg/5VTtKy8ddAA_1_2c2EG1t4l0AyW-uSu1QCLcBGAsYHQ/s1600/programming-and-coding-application-development-and-code-optimization-vector.jpg" alt="Imagen alusiva al blog">
   </div>
+  <div w3-include-html="src/footer.html"></div>
+  <script>
+    includeHTML();
+  </script>
 </body>
 
 </html>
