--- a/src/u1t1.html
+++ b/src/u1t1.html
@@ -25,6 +25,7 @@
       https://www.techiedelight.com/es/expression-tree/<br>Eddy. (2023, 21 mayo). Árbol de expresión. TechEdu.
       https://techlib.net/techedu/arbol-de-expresion/</p>
   </div>
+  <div w3-include-html="footer.html"></div>
   <script>
     includeHTML();
   </script>
