--- a/src/u1t2.html
+++ b/src/u1t2.html
@@ -44,6 +44,7 @@
     <p id="bibliografia">Bibliografía:<br><br>1.2 Acciones semánticas de un analizador sintáctico. (2022, 12 febrero). https://isclyaii.blogspot.com/2022/02/12-acciones-semanticas-de-un-analizador.html<br>Etner. (s. f.). Acciones semánticas de un analizador sintáctico. Scribd. https://es.scribd.com/document/282129916/Acciones-Semanticas-de-Un-Analizador-Sintactico<br>Laura, V. (s. f.). Pila semántica de un analizador sintáctico. https://vilmalauramoraleszunun.blogspot.com/2019/09/pila-semantica-de-un-analizador.html<br>Next, M. A. V. T. O. P. (s. f.). Acciones semanticas de un analizador sintactico. prezi.com. https://prezi.com/p/m0ei0bppzv8u/acciones-semanticas-de-un-analizador-sintactico/<br>Redaccion. (2019, 28 junio). Análisis sintáctico de oraciones ¿Para qué sirve? Centro Estudios Cervantinos. https://www.centroestudioscervantinos.es/analisis-sintactico-de-oraciones/</p>
     </p>
   </div>
+  <div w3-include-html="footer.html"></div>
   <script>
     includeHTML();
   </script>
