--- a/src/u1t3.html
+++ b/src/u1t3.html
@@ -67,6 +67,7 @@
       https://www.studocu.com/es-mx/document/tecnologico-de-estudios-superiores-del-oriente-del-estado-de-mexico/introduccion-a-las-tecnologias-de-la-informacion-y-comunicacion/comprobacion-de-tipos-de-expresiones/17895078
     </p>
   </div>
+  <div w3-include-html="footer.html"></div>
   <script>
     includeHTML();
   </script>
