--- a/src/u1t4.html
+++ b/src/u1t4.html
@@ -32,6 +32,7 @@
     </p>
     <p id="bibliografia">Bibliografía:<br><br>1.4 Pila semantica del analizador sintactico [1430V5JKKO4J]. (s. f.). https://idoc.pub/documents/14-pila-semantica-del-analizador-sintactico-1430v5jkko4j<br>Studocu. (s. f.). 1.4 Pila semántica en analizador sintáctico - Pila semántica en analizador sintáctico La pila - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-de-oaxaca/lenguajes-y-automatas-ii/14-pila-semantica-en-analizador-sintactico/8456952</p>
   </div>
+  <div w3-include-html="footer.html"></div>
   <script>
     includeHTML();
   </script>
