--- a/src/u1t5.html
+++ b/src/u1t5.html
@@ -43,6 +43,7 @@
       valor de <em>E</em> como la suma de los valores de <em>E1</em> y <em>T4.</em></p>
     <p id="bibliografia">Bibliografía:<br><br>▷ Esquema de traducción ¡Fotos & guía 2024! (2020, 28 septiembre). Esquema.net. https://esquema.net/traduccion/<br>1.5 Esquema de traducción_Automatas II. (2023, 8 septiembre). Genially. https://view.genial.ly/64ebbec33bf5a30012abf556/presentation-15-esquema-de-traduccionautomatas-ii<br>Esquemas de traducción: conceptos. (s. f.). https://campusvirtual.ull.es/ocw/pluginfile.php/2208/mod_resource/content/0/perlexamples/node262.html<br>Next, G. M. O. P. (s. f.). Esquemas de traduccion. prezi.com. https://prezi.com/nbvub1lwe25f/esquemas-de-traduccion/</p>
   </div>
+  <div w3-include-html="footer.html"></div>
   <script>
     includeHTML();
   </script>
