--- a/src/u1t6.html
+++ b/src/u1t6.html
@@ -52,6 +52,7 @@
     </p>
     <p id="bibliografia">Bibliografía:<br><br>M, G. P. (2022, 28 febrero). Hoja de trucos de Subred: Máscara de Subred 24, 30, 26, 27, 29, y otras referencias de red CIDR de dirección IP. freeCodeCamp.org. https://www.freecodecamp.org/espanol/news/hoja-de-trucos-de-subred-mascara-de-subred-24-30-26-27-29-y-otras-referencias-de-red-cidr-de-direccion-ip/<br>Studocu. (s. f.-a). Generación de una tabla de símbolos y de direcciones - GeneraciÛn de una tabla de sÌmbolos. Una - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-de-tapachula/mercadotecnia/generacion-de-una-tabla-de-simbolos-y-de-direcciones/34416337<br>Studocu. (s. f.-b). Mora Espinosa - 1.6 Generación de la tabla de símbolo y tabla de direcciones - TECNOLÓGICO NACIONAL - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-de-tijuana/lenguajes-y-automatas-ii/mora-espinosa-16-generacion-de-la-tabla-de-simbolo-y-tabla-de-direcciones/23591668<br>Unidad I - Ánalisis semántico - Lenguajes y autómatas II. (s. f.). Lenguajes y Autómatas II. https://5e344735705b1.site123.me/unidad-i-%C3%81nalisis-sem%C3%A1ntico<br>Walton, A. (2023, 10 enero). Tabla de direcciones MAC » CCNA desde cero. CCNA desde Cero. https://ccnadesdecero.es/tabla-direcciones-mac/</p>
   </div>
+  <div w3-include-html="footer.html"></div>
   <script>
     includeHTML();
   </script>
