corregi errores dados por Claudia

--- a/src/footer.html
+++ b/src/footer.html
@@ -1,35 +1,21 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <meta charset="utf-8">
-  <title>Apuntes de lenguajes y automatas II</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/footer.css">
-</head>
-
-<body>
-  <footer>
-    <p>Publicado por:</p>
-    <div id="integrantes">
-      <div class="integrante">
-        <img src="../img/SeanyCC.svg" alt="Integrante">
-        <p>Seany Campos Cortés</p>
-      </div>
-      <div class="integrante">
-        <img src="../img/VictorMS.svg" alt="Integrante">
-        <p>Víctor Martínez Santiago</p>
-      </div>
-      <div class="integrante">
-        <img src="../img/JorgeEmmanuelPM.svg" alt="Integrante">
-        <p>Jorge Emmanuel Pérez Martínez</p>
-      </div>
-      <div class="integrante">
-        <img src="../img/BrayanJovanyT.svg" alt="Integrante">
-        <p>Brayan Jovany Tovar</p>
-      </div>
-  </footer>
+<footer>
+  <p>Publicado por el equipo azul:</p>
+  <div id="integrantes">
+    <div class="integrante">
+      <img src="../img/SeanyCC.svg" alt="Integrante">
+      <p>Seany Campos Cortés</p>
+    </div>
+    <div class="integrante">
+      <img src="../img/VictorMS.svg" alt="Integrante">
+      <p>Víctor Martínez Santiago</p>
+    </div>
+    <div class="integrante">
+      <img src="../img/JorgeEmmanuelPM.svg" alt="Integrante">
+      <p>Jorge Emmanuel Pérez Martínez</p>
+    </div>
+    <div class="integrante">
+      <img src="../img/BrayanJovanyT.svg" alt="Integrante">
+      <p>Brayan Jovany Tovar</p>
+    </div>
   </div>
-</body>
-
-</html>
+</footer>
