--- a/src/u1t1.html
+++ b/src/u1t1.html
@@ -6,6 +6,8 @@
   <title>Apuntes de lenguajes y automatas II</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/harry.css">
+  <link rel="stylesheet" href="../css/menu.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="icon" href="../img/logo.png" type="image/png">
   <script src="../js/insertarHTML.js"></script>
 </head>
@@ -13,8 +15,9 @@
 <body>
   <div w3-include-html="menu.html"></div>
   <div id="body">
-    <h1>Árboles de expresiones</h1>
-    <img src="https://users.dcc.uchile.cl/~bebustos/apuntes/cc30a/Estructuras/arbolExpresiones.gif" alt="Imagen alusiva al tema">
+    <h1>1.1 Árboles de expresiones</h1>
+    <img src="https://users.dcc.uchile.cl/~bebustos/apuntes/cc30a/Estructuras/arbolExpresiones.gif"
+      alt="Imagen alusiva al tema">
     <p>Un árbol de expresión es una representación gráfica de una expresión matemática o lógica. En un árbol de
       expresión, los nodos representan operadores y las hojas representan operandos.<br><br>Por ejemplo, la expresión
       (a+b)*(c*(d+e)) puede representarse como un árbol de expresión. Aquí, los nodos interiores representan los
@@ -26,9 +29,10 @@
       https://techlib.net/techedu/arbol-de-expresion/</p>
   </div>
   <div w3-include-html="footer.html"></div>
-  <script>
-    includeHTML();
-  </script>
 </body>
+
+<script>
+  includeHTML();
+</script>
 
 </html>
