--- a/src/u1t4.html
+++ b/src/u1t4.html
@@ -6,6 +6,8 @@
   <title>Apuntes de lenguajes y automatas II</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/harry.css">
+  <link rel="stylesheet" href="../css/menu.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="icon" href="../img/logo.png" type="image/png">
   <script src="../js/insertarHTML.js"></script>
 </head>
@@ -13,7 +15,7 @@
 <body>
   <div w3-include-html="menu.html"></div>
   <div id="body">
-    <h1>Pila semántica en un analizador sintáctico</h1>
+    <h1>1.4 Pila semántica en un analizador sintáctico</h1>
     <img src="https://th.bing.com/th/id/R.9a67f071765c3647f80495bd88a39f60?rik=rj0F7rQ5SPBl%2bw&pid=ImgRaw&r=0"
       alt="Imagen alusiva al tema">
     <p>La pila semántica juega un papel fundamental en el desarrollo de cualquier analizador semántico. Dentro de cada
@@ -30,12 +32,17 @@
       ser así, se recorre la pila hasta cumplir la condición, se actualiza la pila y se usa en forma recursiva la misma
       regla1. Este proceso se repite hasta dejar la pila vacía.
     </p>
-    <p id="bibliografia">Bibliografía:<br><br>1.4 Pila semantica del analizador sintactico [1430V5JKKO4J]. (s. f.). https://idoc.pub/documents/14-pila-semantica-del-analizador-sintactico-1430v5jkko4j<br>Studocu. (s. f.). 1.4 Pila semántica en analizador sintáctico - Pila semántica en analizador sintáctico La pila - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-de-oaxaca/lenguajes-y-automatas-ii/14-pila-semantica-en-analizador-sintactico/8456952</p>
+    <p id="bibliografia">Bibliografía:<br><br>1.4 Pila semantica del analizador sintactico [1430V5JKKO4J]. (s. f.).
+      https://idoc.pub/documents/14-pila-semantica-del-analizador-sintactico-1430v5jkko4j<br>Studocu. (s. f.). 1.4 Pila
+      semántica en analizador sintáctico - Pila semántica en analizador sintáctico La pila - Studocu.
+      https://www.studocu.com/es-mx/document/instituto-tecnologico-de-oaxaca/lenguajes-y-automatas-ii/14-pila-semantica-en-analizador-sintactico/8456952
+    </p>
   </div>
   <div w3-include-html="footer.html"></div>
-  <script>
-    includeHTML();
-  </script>
 </body>
+
+<script>
+  includeHTML();
+</script>
 
 </html>
