--- a/src/u1t6.html
+++ b/src/u1t6.html
@@ -6,6 +6,8 @@
   <title>Apuntes de lenguajes y automatas II</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/harry.css">
+  <link rel="stylesheet" href="../css/menu.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="icon" href="../img/logo.png" type="image/png">
   <script src="../js/insertarHTML.js"></script>
 </head>
@@ -13,7 +15,7 @@
 <body>
   <div w3-include-html="menu.html"></div>
   <div id="body">
-    <h1>Generación de la tabla de símbolo y tabla de direcciones</h1>
+    <h1>1.6 Generación de la tabla de símbolo y tabla de direcciones</h1>
     <img
       src="https://blogger.googleusercontent.com/img/a/AVvXsEjBe8OGVuAW6Y0S8A-2uDDuPwSYRBHYQbJkPD8R1ilXRYXotNEPsVQhujcSQ7FxnpIF7VJ9x2gydRTi1aMsEVnuWpHXNDkEOfDcg3ZwYY3VSE88i71fAszPNEbqr9_mSFHibbMAdjv13nQti_GeLFfOKu_HwUtr2tyO4XokP02BOQhOEmH755zW_g=s567"
       alt="Imagen alusiva al tema">
@@ -32,30 +34,72 @@
       MAC es un identificador único asignado a cada tarjeta de red en un dispositivo y se utiliza para identificar y
       comunicarse con dispositivos en la red local (LAN).
       <br><br>
-      Un ejemplo de un esquema de traducción que podría usarse para generar una tabla de símbolos:
+      Un ejemplo simplificado de cómo podría verse una tabla de símbolos para un fragmento de código:
     </p>
     <div id="ejemplo">
-      <p>L -> E n { print(E.val); }<br>
-        E -> E1 + T { E.val = E1.val + T.val; }<br>
-        E -> T { E.val = T.val; }<br>
-        T -> T1 * F { T.val = T1.val * F.val; }<br>
-        T -> F { T.val = F.val; }<br>
-        F -> ( E ) { F.val = E.val; }<br>
-        F -> digit { F.val = digit.lexval; }</p>
+      <table>
+        <tr>
+          <th>Nombre</th>
+          <th>Tipo</th>
+          <th>Ámbito</th>
+          <th>Dirección</th>
+        </tr>
+        <tr>
+          <td>a</td>
+          <td>int</td>
+          <td>global</td>
+          <td>0x001</td>
+        </tr>
+        <tr>
+          <td>b</td>
+          <td>int</td>
+          <td>global</td>
+          <td>0x005</td>
+        </tr>
+        <tr>
+          <td>suma</td>
+          <td>func</td>
+          <td>global</td>
+          <td>0x009</td>
+        </tr>
+        <tr>
+          <td>c</td>
+          <td>int</td>
+          <td>suma</td>
+          <td>0x00D</td>
+        </tr>
+        <tr>
+          <td>d</td>
+          <td>int</td>
+          <td>suma</td>
+          <td>0x011</td>
+        </tr>
+      </table>
     </div>
 
-    <p>En este esquema de traducción, cada producción de la gramática tiene asociada una acción semántica que se ejecuta
-      cuando se aplica esa producción. Por ejemplo, en la producción <em>E -> E1 + T { E.val = E1.val + T.val; }</em>,
-      la acción semántica <em>{ E.val = E1.val + T.val; }</em> se ejecuta cuando se aplica la producción, y calcula el
-      valor de <em>E</em> como la suma de los valores de <em>E1</em> y <em>T4</em>.
+    <p>En este ejemplo, <em>a</em> y <em>b</em> son variables enteras en el ámbito global, mientras que <em>c</em> y
+      <em>d</em> son variables enteras dentro de la función <em>suma</em>. Las direcciones son solo ilustrativas y
+      representan la ubicación en memoria de cada identificador.
 
     </p>
-    <p id="bibliografia">Bibliografía:<br><br>M, G. P. (2022, 28 febrero). Hoja de trucos de Subred: Máscara de Subred 24, 30, 26, 27, 29, y otras referencias de red CIDR de dirección IP. freeCodeCamp.org. https://www.freecodecamp.org/espanol/news/hoja-de-trucos-de-subred-mascara-de-subred-24-30-26-27-29-y-otras-referencias-de-red-cidr-de-direccion-ip/<br>Studocu. (s. f.-a). Generación de una tabla de símbolos y de direcciones - GeneraciÛn de una tabla de sÌmbolos. Una - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-de-tapachula/mercadotecnia/generacion-de-una-tabla-de-simbolos-y-de-direcciones/34416337<br>Studocu. (s. f.-b). Mora Espinosa - 1.6 Generación de la tabla de símbolo y tabla de direcciones - TECNOLÓGICO NACIONAL - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-de-tijuana/lenguajes-y-automatas-ii/mora-espinosa-16-generacion-de-la-tabla-de-simbolo-y-tabla-de-direcciones/23591668<br>Unidad I - Ánalisis semántico - Lenguajes y autómatas II. (s. f.). Lenguajes y Autómatas II. https://5e344735705b1.site123.me/unidad-i-%C3%81nalisis-sem%C3%A1ntico<br>Walton, A. (2023, 10 enero). Tabla de direcciones MAC » CCNA desde cero. CCNA desde Cero. https://ccnadesdecero.es/tabla-direcciones-mac/</p>
+    <p id="bibliografia">Bibliografía:<br><br>M, G. P. (2022, 28 febrero). Hoja de trucos de Subred: Máscara de Subred
+      24, 30, 26, 27, 29, y otras referencias de red CIDR de dirección IP. freeCodeCamp.org.
+      https://www.freecodecamp.org/espanol/news/hoja-de-trucos-de-subred-mascara-de-subred-24-30-26-27-29-y-otras-referencias-de-red-cidr-de-direccion-ip/<br>Studocu.
+      (s. f.-a). Generación de una tabla de símbolos y de direcciones - GeneraciÛn de una tabla de sÌmbolos. Una -
+      Studocu.
+      https://www.studocu.com/es-mx/document/instituto-tecnologico-de-tapachula/mercadotecnia/generacion-de-una-tabla-de-simbolos-y-de-direcciones/34416337<br>Studocu.
+      (s. f.-b). Mora Espinosa - 1.6 Generación de la tabla de símbolo y tabla de direcciones - TECNOLÓGICO NACIONAL -
+      Studocu.
+      https://www.studocu.com/es-mx/document/instituto-tecnologico-de-tijuana/lenguajes-y-automatas-ii/mora-espinosa-16-generacion-de-la-tabla-de-simbolo-y-tabla-de-direcciones/23591668<br>Unidad
+      I - Ánalisis semántico - Lenguajes y autómatas II. (s. f.). Lenguajes y Autómatas II.
+      https://5e344735705b1.site123.me/unidad-i-%C3%81nalisis-sem%C3%A1ntico<br>Walton, A. (2023, 10 enero). Tabla de
+      direcciones MAC » CCNA desde cero. CCNA desde Cero. https://ccnadesdecero.es/tabla-direcciones-mac/</p>
   </div>
   <div w3-include-html="footer.html"></div>
-  <script>
-    includeHTML();
-  </script>
 </body>
+
+<script>
+  includeHTML();
+</script>
 
 </html>
