--- a/src/u1t7.html
+++ b/src/u1t7.html
@@ -6,6 +6,8 @@
   <title>Apuntes de lenguajes y automatas II</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/harry.css">
+  <link rel="stylesheet" href="../css/menu.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="icon" href="../img/logo.png" type="image/png">
   <script src="../js/insertarHTML.js"></script>
 </head>
@@ -13,23 +15,30 @@
 <body>
   <div w3-include-html="menu.html"></div>
   <div id="body">
-    <h1>Manejo de errores semánticos</h1>
-    <img src="https://i.ytimg.com/vi/RsYeFNDSG0M/maxresdefault.jpg" alt="Imagen alusiva al tema">
+    <h1>1.7 Manejo de errores semánticos</h1>
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj0kDMBHB7v40eTK6Fa6cFcLgZ6TGRPvT1OWRYfQFJPdBqEa8bH63lUrfkRdBPRt9UNV16IuuF7c3-WgOPUBLRl6NQ7OuwW59oD985prnU56rX-9Ml2FQrzYGFziavzXuReOAsKNbBl61yhWZHcAEOGbFIlvWvnS6A46aZOd5EL1AaG40DRiZFKAZejyQ/s248/que-es-png-5.png" alt="Imagen alusiva al tema">
     <p>El manejo de errores semánticos es una parte crucial en el proceso de compilación y ejecución de un programa. Un
       error semántico ocurre cuando la sintaxis del código es correcta, pero el significado o la semántica no es el que
       se pretendía. Por ejemplo, puede ser un algoritmo incorrecto o la omisión de una sentencia.
       <br><br>
-      Los errores semánticos pueden hacer que el programa termine de forma anormal, con o sin un mensaje de error1. Los
+      Los errores semánticos pueden hacer que el programa termine de forma anormal, con o sin un mensaje de error. Los
       compiladores e intérpretes solo se ocupan de la estructura del código que se escribe, y no de su significado. Por
       lo tanto, es responsabilidad del programador asegurarse de que el código no solo sea sintácticamente correcto,
       sino también semánticamente correcto.
     </p>
-    <p id="bibliografia">Bibliografía:<br><br>Next, M. M. M. O. P. (s. f.). MANEJO DE ERRORES SEMÁNTICOS. prezi.com. https://prezi.com/jmntejze1wxf/manejo-de-errores-semanticos/<br>Next, X. P. S. O. P. (s. f.). MANEJO DE ERRORES SEMÁNTICOS. prezi.com. https://prezi.com/p/rihahfasxhpg/manejo-de-errores-semanticos/<br>Studocu. (s. f.). 1 7-Manejo de errores semánticos - 1 Manejo de errores semánticos Un error semántico se produce - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-de-oaxaca/lenguajes-y-automatas-ii/1-7-manejo-de-errores-semanticos/8456915<br>uniwebsidad. (s. f.). Capítulo 12. Manejo de errores y excepciones (Algoritmos de programación con Python). https://uniwebsidad.com/libros/algoritmos-python/capitulo-12</p>
+    <p id="bibliografia">Bibliografía:<br><br>Next, M. M. M. O. P. (s. f.). MANEJO DE ERRORES SEMÁNTICOS. prezi.com.
+      https://prezi.com/jmntejze1wxf/manejo-de-errores-semanticos/<br>Next, X. P. S. O. P. (s. f.). MANEJO DE ERRORES
+      SEMÁNTICOS. prezi.com. https://prezi.com/p/rihahfasxhpg/manejo-de-errores-semanticos/<br>Studocu. (s. f.). 1
+      7-Manejo de errores semánticos - 1 Manejo de errores semánticos Un error semántico se produce - Studocu.
+      https://www.studocu.com/es-mx/document/instituto-tecnologico-de-oaxaca/lenguajes-y-automatas-ii/1-7-manejo-de-errores-semanticos/8456915<br>uniwebsidad.
+      (s. f.). Capítulo 12. Manejo de errores y excepciones (Algoritmos de programación con Python).
+      https://uniwebsidad.com/libros/algoritmos-python/capitulo-12</p>
   </div>
   <div w3-include-html="footer.html"></div>
-  <script>
-    includeHTML();
-  </script>
 </body>
+
+<script>
+  includeHTML();
+</script>
 
 </html>
