--- a/src/menu.html
+++ b/src/menu.html
@@ -1,83 +1,71 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <meta charset="utf-8">
-  <title>Apuntes de lenguajes y automatas II</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/menu.css">
-</head>
-
-<body>
-  <nav>
+<nav>
+  <div id="cabecera">
     <a id="titulo" href="../index.html">
       <h1>APUNTES DE LENGUAJES Y AUTOMATAS II</h1>
     </a>
-    <ul>
-      <!-- <li><a href="index.html">Inicio</a></li> -->
-      <li class="dropdown">
-        <div class="dropbtn">
-          <p>Unidad I</p>
-          <img src="../img/FlechaAbajo.png" alt="Flecha">
-        </div>
-        <div class="dropdown-content">
-          <a href="u1t1.html">Árboles de expresiones</a>
-          <a href="u1t2.html">Acciones semánticas de un analizador sintáctico</a>
-          <a href="u1t3.html">Comprobaciones de tipos en expresiones</a>
-          <a href="u1t4.html">Pila semántica en un analizador sintáctico</a>
-          <a href="u1t5.html">Esquema de traducción</a>
-          <a href="u1t6.html">Generación de la tabla de símbolo y tabla de direcciones</a>
-          <a href="u1t7.html">Manejo de errores semánticos</a>
-        </div>
-      </li>
-      <li class="dropdown">
-        <div class="dropbtn">
-          <p>Unidad II</p>
-          <img src="../img/FlechaAbajo.png" alt="Flecha">
-        </div>
-        <div class="dropdown-content">
-          <!-- <a href="#">Opción 1</a>
+    <img class="boton-menu-oculto" src="../img/menu.png" alt="Menú">
+  </div>
+  <ul>
+    <!-- <li><a href="index.html">Inicio</a></li> -->
+    <li class="dropdown">
+      <div class="dropbtn">
+        <p>Unidad I</p>
+        <img src="../img/FlechaAbajo.png" alt="Flecha">
+      </div>
+      <div class="dropdown-content">
+        <a href="u1t1.html">1.1 Árboles de expresiones</a>
+        <a href="u1t2.html">1.2 Acciones semánticas de un analizador sintáctico</a>
+        <a href="u1t3.html">1.3 Comprobaciones de tipos en expresiones</a>
+        <a href="u1t4.html">1.4 Pila semántica en un analizador sintáctico</a>
+        <a href="u1t5.html">1.5 Esquema de traducción</a>
+        <a href="u1t6.html">1.6 Generación de la tabla de símbolo y tabla de direcciones</a>
+        <a href="u1t7.html">1.7 Manejo de errores semánticos</a>
+      </div>
+    </li>
+    <li class="dropdown">
+      <div class="dropbtn">
+        <p>Unidad II</p>
+        <img src="../img/FlechaAbajo.png" alt="Flecha">
+      </div>
+      <div class="dropdown-content">
+        <!-- <a href="#">Opción 1</a>
                     <a href="#">Opción 2</a>
                     <a href="#">Opción 3</a>
                     <a href="#">Opción 4</a>
                     <a href="#">Opción 5</a>
                     <a href="#">Opción 6</a>
                     <a href="#">Opción 7</a> -->
-        </div>
-      </li>
-      <li class="dropdown">
-        <div class="dropbtn">
-          <p>Unidad III</p>
-          <img src="../img/FlechaAbajo.png" alt="Flecha">
-        </div>
-        <div class="dropdown-content">
-          <!-- <a href="#">Opción 1</a>
+      </div>
+    </li>
+    <li class="dropdown">
+      <div class="dropbtn">
+        <p>Unidad III</p>
+        <img src="../img/FlechaAbajo.png" alt="Flecha">
+      </div>
+      <div class="dropdown-content">
+        <!-- <a href="#">Opción 1</a>
                     <a href="#">Opción 2</a>
                     <a href="#">Opción 3</a>
                     <a href="#">Opción 4</a>
                     <a href="#">Opción 5</a>
                     <a href="#">Opción 6</a>
                     <a href="#">Opción 7</a> -->
-        </div>
-      </li>
-      <li class="dropdown">
-        <div class="dropbtn">
-          <p>Unidad IV</p>
-          <img src="../img/FlechaAbajo.png" alt="Flecha">
-        </div>
-        <div class="dropdown-content">
-          <!-- <a href="#">Opción 1</a>
+      </div>
+    </li>
+    <li class="dropdown">
+      <div class="dropbtn">
+        <p>Unidad IV</p>
+        <img src="../img/FlechaAbajo.png" alt="Flecha">
+      </div>
+      <div class="dropdown-content">
+        <!-- <a href="#">Opción 1</a>
                     <a href="#">Opción 2</a>
                     <a href="#">Opción 3</a>
                     <a href="#">Opción 4</a>
                     <a href="#">Opción 5</a>
                     <a href="#">Opción 6</a>
                     <a href="#">Opción 7</a> -->
-        </div>
-      </li>
-    </ul>
-  </nav>
-
-</body>
-
-</html>
+      </div>
+    </li>
+  </ul>
+</nav>
