modifique titulos del submenu

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <img src="img/FlechaAbajo.png" alt="Flecha">
         </div>
         <div class="dropdown-content">
-          <a href="src/u1t1.html">Árboles de expresiones</a>
-          <a href="src/u1t2.html">Acciones semánticas de un analizador sintáctico</a>
-          <a href="src/u1t3.html">Comprobaciones de tipos en expresiones</a>
-          <a href="src/u1t4.html">Pila semántica en un analizador sintáctico</a>
-          <a href="src/u1t5.html">Esquema de traducción</a>
-          <a href="src/u1t6.html">Generación de la tabla de símbolo y tabla de direcciones</a>
-          <a href="src/u1t7.html">Manejo de errores semánticos</a>
+          <a href="src/u1t1.html">1.1 Árboles de expresiones</a>
+          <a href="src/u1t2.html">1.2 Acciones semánticas de un analizador sintáctico</a>
+          <a href="src/u1t3.html">1.3 Comprobaciones de tipos en expresiones</a>
+          <a href="src/u1t4.html">1.4 Pila semántica en un analizador sintáctico</a>
+          <a href="src/u1t5.html">1.5 Esquema de traducción</a>
+          <a href="src/u1t6.html">1.6 Generación de la tabla de símbolo y tabla de direcciones</a>
+          <a href="src/u1t7.html">1.7 Manejo de errores semánticos</a>
         </div>
       </li>
       <li class="dropdown">
