actualice el blog para la unidad 2

--- a/src/footer.html
+++ b/src/footer.html
@@ -17,5 +17,9 @@
       <img src="../img/BrayanJovanyT.svg" alt="Integrante">
       <p>Brayan Jovany Tovar</p>
     </div>
+    <div class="integrante">
+      <img src="../img/AbelErubielVH.svg" alt="Integrante">
+      <p>Abel Erubiel Vera Henández</p>
+    </div>
   </div>
 </footer>
