--- a/src/menu.html
+++ b/src/menu.html
@@ -28,13 +28,9 @@
         <img src="../img/FlechaAbajo.png" alt="Flecha">
       </div>
       <div class="dropdown-content">
-        <!-- <a href="#">Opción 1</a>
-                    <a href="#">Opción 2</a>
-                    <a href="#">Opción 3</a>
-                    <a href="#">Opción 4</a>
-                    <a href="#">Opción 5</a>
-                    <a href="#">Opción 6</a>
-                    <a href="#">Opción 7</a> -->
+        <a href="u2t1.html">2.1 Notaciones</a>
+        <a href="u2t2.html">2.2 Representaciones de código intermedio</a>
+        <a href="u2t3.html">2.3 Esquema de generación</a>
       </div>
     </li>
     <li class="dropdown">
