--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
 <body>
   <nav>
-    <a id="titulo" href="index.html">
-      <h1>APUNTES DE LENGUAJES Y AUTOMATAS II</h1>
-    </a>
+    <div id="cabecera">
+      <a id="titulo" href="../index.html">
+        <h1>APUNTES DE LENGUAJES Y AUTOMATAS II</h1>
+      </a>
+      <img class="boton-menu-oculto" src="../img/menu.png" alt="Menú">
+    </div>
     <ul>
       <!-- <li><a href="index.html">Inicio</a></li> -->
       <li class="dropdown">
@@ -40,13 +43,9 @@
           <img src="img/FlechaAbajo.png" alt="Flecha">
         </div>
         <div class="dropdown-content">
-          <!-- <a href="#">Opción 1</a>
-                    <a href="#">Opción 2</a>
-                    <a href="#">Opción 3</a>
-                    <a href="#">Opción 4</a>
-                    <a href="#">Opción 5</a>
-                    <a href="#">Opción 6</a>
-                    <a href="#">Opción 7</a> -->
+          <a href="src/u2t1.html">2.1 Notaciones</a>
+          <a href="src/u2t2.html">2.2 Representaciones de código intermedio</a>
+          <a href="src/u2t3.html">2.3 Esquema de generación</a>
         </div>
       </li>
       <li class="dropdown">
