actualice el blog para la unidad 3

--- a/src/u2t3.html
+++ b/src/u2t3.html
@@ -18,17 +18,17 @@
     <h1>2.3 Esquema de generación</h1>
     <img src="https://static.s123-cdn-static.com/uploads/3037031/2000_5e626c00e5527.jpg"
       alt="Imagen alusiva al tema">
-    <h2>2.3.1 Variables y constantes</h2>
+    <h2 id="2.3.1">2.3.1 Variables y constantes</h2>
     <p>Las variables son espacios en la memoria de la computadora que permiten almacenar temporalmente un dato durante la ejecución de un programa. Su contenido puede cambiar durante la ejecución del programa. Por otro lado, una constante es un dato numérico o alfanumérico que no cambia durante la ejecución del programa.</p>
-    <h2>2.3.2 Expresiones</h2>
+    <h2 id="2.3.2">2.3.2 Expresiones</h2>
     <p>Las expresiones son combinaciones de constantes, variables, símbolos de operación, paréntesis y nombres de funciones especiales. Cada expresión toma un valor que se determina tomando los valores de las variables y constantes implicadas y la ejecución de las operaciones indicadas.</p>
-    <h2>2.3.3 Instrucción de asignación</h2>
+    <h2 id="2.3.3">2.3.3 Instrucción de asignación</h2>
     <p>Una instrucción de asignación consiste en asignar el resultado de la evaluación de una expresión a una variable. Las operaciones de asignación deben quedar expresadas por una expresión sencilla, si está es compleja se debe reducir hasta quedar un operador sencillo.</p>
-    <h2>2.3.4 Instrucciones de control</h2>
+    <h2 id="2.3.4">2.3.4 Instrucciones de control</h2>
     <p>En lenguajes de programación, las estructuras de control permiten modificar el flujo de ejecución de las instrucciones de un programa. Con las estructuras de control se puede: De acuerdo a una condición, ejecutar un grupo u otro de sentencias (If-Then-Else y Select-Case), Ejecutar un grupo de sentencias mientras exista una condición (Do-While), Ejecutar un grupo de sentencias hasta que exista una condición (Do-Until).</p>
-    <h2>2.3.5 Funciones</h2>
+    <h2 id="2.3.5">2.3.5 Funciones</h2>
     <p>En programación, una función es un grupo de instrucciones con un objetivo en particular y que se ejecuta al ser llamada desde otra función o procedimiento. Una función puede llamarse múltiples veces e incluso llamarse a sí misma (función recurrente).</p>
-    <h2>2.3.6 Estructuras</h2>
+    <h2 id="2.3.6">2.3.6 Estructuras</h2>
     <p>Los árboles de expresiones representan el código de nivel del lenguaje en forma de datos. Los datos se almacenan en una estructura con forma de árbol. Cada nodo del árbol de expresión representa una expresión, por ejemplo, una llamada al método o una operación binaria.</p>
     <p id="bibliografia">Bibliografía:<br><br>2.3 Esquemas de generacion. (s. f.). https://1library.co/document/zg6jjw6q-2-3-esquemas-de-generacion.html<br>2.3 Esquemas de generacion - Free download PDF. (s. f.). https://kupdf.net/download/23-esquemas-de-generacion_59d59dbd08bbc5ff73686f0d_pdf<br>Análisis semántico para lenguajes y autómatas | Apuntes de Teoría de los Autómatas | Docsity. (s. f.). https://www.docsity.com/es/analisis-semantico-para-lenguajes-y-automatas/5938337/<br>Peregrino, A. (2017). Esquemas de generación. www.academia.edu. https://www.academia.edu/35158227/Esquemas_de_generaci%C3%B3n<br>Puc, E. o. P. (2018, 9 julio). GoConqr - 2.3 Esquemas de generación. GoConqr. https://www.goconqr.com/mapamental/7083495/2-3-esquemas-de-generacion<br>Studocu. (s. f.). Lenguajes y Autómatas 2 - Unidad 1 - Análisis Semántico - + a / c Unidad I: Análisis semántico 1 - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-de-ciudad-juarez/lenguajes-y-automatas-ii/lenguajes-y-automatas-2-unidad-1-analisis-semantico/17551776</p>
   </div>
