--- a/src/menu.html
+++ b/src/menu.html
@@ -28,9 +28,34 @@
         <img src="../img/FlechaAbajo.png" alt="Flecha">
       </div>
       <div class="dropdown-content">
-        <a href="u2t1.html">2.1 Notaciones</a>
-        <a href="u2t2.html">2.2 Representaciones de código intermedio</a>
-        <a href="u2t3.html">2.3 Esquema de generación</a>
+        <div class="subsubmenu">
+          <a href="u2t1.html">2.1 Notaciones</a>
+          <div class="dropdown-content-content">
+            <!-- <a href="u2t1.html#2.1.1">2.1.1 Prefija</a>
+            <a href="u2t1.html#2.1.2">2.1.2 Infija</a>
+            <a href="u2t1.html#2.1.3">2.1.3 Postfija</a> -->
+          </div>
+        </div>
+        <div class="subsubmenu">
+          <a href="u2t2.html">2.2 Representaciones de código intermedio</a>
+          <div class="dropdown-content-content">
+            <!-- <a href="u2t2.html#2.2.1">2.2.1 Notación Polaca</a>
+            <a href="u2t2.html#2.2.2">2.2.2 Código P</a>
+            <a href="u2t2.html#2.2.3">2.2.3 Triplos</a>
+            <a href="u2t2.html#2.2.4">2.2.4 Cuádruplos</a> -->
+          </div>
+        </div>
+        <div class="subsubmenu">
+          <a href="u2t3.html">2.3 Esquema de generación</a>
+          <div class="dropdown-content-content">
+            <!-- <a href="u2t3.html#2.3.1">2.3.1 Variables y constantes</a>
+            <a href="u2t3.html#2.3.2">2.3.2 Expresiones</a>
+            <a href="u2t3.html#2.3.3">2.3.3 Instrucción de asignación</a>
+            <a href="u2t3.html#2.3.4">2.3.4 Instrucciones de control</a>
+            <a href="u2t3.html#2.3.5">2.3.5 Funciones</a>
+            <a href="u2t3.html#2.3.6">2.3.6 Estructuras</a> -->
+          </div>
+        </div>
       </div>
     </li>
     <li class="dropdown">
@@ -39,13 +64,8 @@
         <img src="../img/FlechaAbajo.png" alt="Flecha">
       </div>
       <div class="dropdown-content">
-        <!-- <a href="#">Opción 1</a>
-                    <a href="#">Opción 2</a>
-                    <a href="#">Opción 3</a>
-                    <a href="#">Opción 4</a>
-                    <a href="#">Opción 5</a>
-                    <a href="#">Opción 6</a>
-                    <a href="#">Opción 7</a> -->
+        <a href="u3t1.html">3.1 Tipos de optimización</a>
+        <a href="u3t2.html">3.2 Costos</a>
       </div>
     </li>
     <li class="dropdown">
