--- a/src/u2t1.html
+++ b/src/u2t1.html
@@ -19,11 +19,11 @@
     <img src="https://i.ytimg.com/vi/p5L1T4EoX4M/maxresdefault.jpg"
       alt="Imagen alusiva al tema">
     <p>Las notaciones prefija, infija y postfija son utilizadas en el contexto de lenguajes y autómatas para representar expresiones aritméticas. Estas notaciones son importantes porque eliminan la necesidad de paréntesis para indicar el orden de las operaciones. En la notación infija, a veces puede ser ambiguo el orden de las operaciones, como en la expresión <b>A + B * C</b>. Sin embargo, en las notaciones prefija y postfija, el orden de las operaciones está implícito, lo que elimina cualquier ambigüedad.</p>
-    <h2>2.1.1 Prefija</h2>
+    <h2 id="2.1.1">2.1.1 Prefija</h2>
     <p>En esta notación, el operador se coloca antes de los dos operandos. Por ejemplo, la expresión infija <b>A + B</b> se convertiría en <b>+ A B</b> en notación prefija.</p>
-    <h2>2.1.2 Infija</h2>
+    <h2 id="2.1.2">2.1.2 Infija</h2>
     <p>Es la notación común de fórmulas aritméticas y lógicas, en la cual se escriben los operadores entre los operandos en que están actuando. Por ejemplo, en la expresión <b>B * C</b>, el operador de multiplicación <b>*</b> aparece entre los operandos <b>B y C</b>.</p>
-    <h2>2.1.3 Postfija</h2>
+    <h2 id="2.1.3">2.1.3 Postfija</h2>
     <p>Aquí, el operador se coloca después de los dos operandos. Siguiendo con el ejemplo anterior, <b>A + B</b> se convertiría en <b>A B +</b> en notación postfija.</p>
     <p id="bibliografia">Bibliografía:<br><br>3.9. Expresiones en notaciones infija, prefija y sufija — Solución de problemas con algoritmos y estructuras de datos. (s. f.). https://runestone.academy/ns/books/published/pythoned/BasicDS/ExpresionesInfijasPrefijasYSufijas.html<br>Author. (s. f.). Que son las notaciones Prefijas Infijas y Postfijas? – ConsejosSabios. https://consejossabios.com.mx/que-son-las-notaciones-prefijas-infijas-y-postfijas/<br>lenguajes y automatas 2 - NOTACIONES. (s. f.). https://sites.google.com/view/lenguajesintermedios/notaciones<br>Studocu. (s. f.). Actividad 2 - Lenguajes y Autómatas II - Studocu. https://www.studocu.com/es-mx/document/instituto-tecnologico-superior-de-huauchinango/lenguajes-y-automatas-ii/actividad-2/18675080<br>Tema 1.5. Notación prefija, infija y postfija de expresiones  - Estructura de Datos - Instituto Consorcio Clavijero. (s. f.). https://cursos.clavijero.edu.mx/cursos/144_ed/modulo1/contenidos/tema1.5.html</p>
   </div>
