corregi bug de menu index

--- a/index.html
+++ b/index.html
@@ -54,13 +54,8 @@
           <img src="img/FlechaAbajo.png" alt="Flecha">
         </div>
         <div class="dropdown-content">
-          <!-- <a href="#">Opción 1</a>
-                    <a href="#">Opción 2</a>
-                    <a href="#">Opción 3</a>
-                    <a href="#">Opción 4</a>
-                    <a href="#">Opción 5</a>
-                    <a href="#">Opción 6</a>
-                    <a href="#">Opción 7</a> -->
+          <a href="u3t1.html">3.1 Tipos de optimización</a>
+          <a href="u3t2.html">3.2 Costos</a>
         </div>
       </li>
       <li class="dropdown">
