--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <img src="img/FlechaAbajo.png" alt="Flecha">
         </div>
         <div class="dropdown-content">
-          <a href="u3t1.html">3.1 Tipos de optimización</a>
-          <a href="u3t2.html">3.2 Costos</a>
+          <a href="src/u3t1.html">3.1 Tipos de optimización</a>
+          <a href="src/u3t2.html">3.2 Costos</a>
         </div>
       </li>
       <li class="dropdown">
