actualice el blog para la unidad 4

--- a/src/menu.html
+++ b/src/menu.html
@@ -74,13 +74,10 @@
         <img src="../img/FlechaAbajo.png" alt="Flecha">
       </div>
       <div class="dropdown-content">
-        <!-- <a href="#">Opción 1</a>
-                    <a href="#">Opción 2</a>
-                    <a href="#">Opción 3</a>
-                    <a href="#">Opción 4</a>
-                    <a href="#">Opción 5</a>
-                    <a href="#">Opción 6</a>
-                    <a href="#">Opción 7</a> -->
+        <a href="u4t1.html">4.1 Registros</a>
+        <a href="u4t2.html">4.2 Lenguaje ensamblador</a>
+        <a href="u4t3.html">4.3 Lenguaje máquina</a>
+        <a href="u4t4.html">4.4 Administración de memoria</a>
       </div>
     </li>
   </ul>
